--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
   </head>
+  <!-- <body style="border: 1px solid red; -webkit-app-region: drag"> -->
   <body>
     <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
